<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="product"
            type="org.moserp.product.Product"/>

        <variable
            name="totalQuantityOnHand"
            type="String"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize">
        </android.support.v7.widget.Toolbar>

        <android.support.v7.widget.CardView
            android:id="@+id/cardProductDetails"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/titleProductDetails"
                    style="@style/Header"
                    android:text="@string/title_details"
                    />

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:columnCount="4"
                    android:rowCount="4"
                    >

                    <TextView
                        android:id="@+id/labelId"
                        android:layout_column="0"
                        android:layout_row="0"
                        android:labelFor="@+id/productId"
                        android:text="@string/label_id"
                        style="@style/FormLabel"/>

                    <TextView
                        android:id="@+id/productId"
                        android:layout_column="1"
                        android:layout_row="0"
                        android:text="@{product.id}"
                        style="@style/FormField"/>

                    <View
                        style="@style/Divider"
                        android:layout_columnSpan="4"
                        android:layout_row="1"/>

                    <TextView
                        android:id="@+id/labelProduct"
                        android:layout_column="0"
                        android:layout_row="2"
                        android:text="@string/label_product_name"
                        style="@style/FormLabel"/>

                    <TextView
                        android:id="@+id/productName"
                        android:layout_column="1"
                        android:layout_row="2"
                        android:text="@{product.name}"
                        style="@style/FormField"/>

                    <TextView
                        android:id="@+id/labelEan"
                        android:layout_column="2"
                        android:layout_row="2"
                        android:text="@string/label_ean"
                        style="@style/FormLabel"/>

                    <TextView
                        android:id="@+id/productEan"
                        android:layout_column="3"
                        android:layout_row="2"
                        android:text="@{product.ean}"
                        style="@style/FormField"/>

                    <View style="@style/Divider" android:layout_columnSpan="4"/>

                </GridLayout>

                <TextView
                    android:id="@+id/labelInventoryItems"
                    style="@style/Header"
                    android:text="@string/label_inventoryItems"
                    />

                <GridLayout
                    android:id="@+id/totalAmount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:numColumns="2"
                    android:rowCount="4">

                    <TextView
                        android:id="@+id/labelTotalQuantityOnHand"
                        android:layout_column="0"
                        android:layout_row="0"
                        android:text="@string/label_totalQuantityOnHand"
                        style="@style/FormLabel"/>

                    <TextView
                        android:id="@+id/totalQuantityOnHand"
                        style="@style/FormValue"
                        android:layout_column="1"
                        android:layout_row="0"
                        android:text="@{totalQuantityOnHand}"/>

                </GridLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/inventoryItemsList"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:scrollbars="vertical"/>

                <include layout="@layout/include_action_buttons"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</layout>